# solmentor

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  Anchor.toml  DEPLOYMENT.md  FRONTEND.md  LICENSE  README.md  SMART_CONTRACT.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: WalletProvider.tsx
programs/solmentor/: Cargo.toml
programs/solmentor/src/: lib.rs
