[package]
name = "solmentor"
version = "0.1.0"
description = "SolMentor - AI-Powered Decentralized Learning Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solmentor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "~1.18.0"
